@@ -1,4 +1,4 @@
-package org.main.uneton.comvanilla;
+package org.main.uneton.tabcomps;
 
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -6,13 +6,13 @@ import org.bukkit.command.TabCompleter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 
-public class TimeTabs implements TabCompleter {
-    String[] collections = {"day", "night"};
+public class EnderchestTabs implements TabCompleter {
 
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        return args.length == 1 ? List.of(collections) : null;
+        return Collections.emptyList();
     }
 }
